--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "websiteportf",
+  "name": "websiteportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arildomagno.github.io/websiteportf/",
+  "homepage": "https://arildomagno.github.io/websiteportfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
